--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title id="title">Title</title>
+    <title id="title1">Title</title>
       <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 
@@ -102,7 +102,8 @@
     </div>
  <!---------------------------end of footer---------------------->
 </section>
- <script src="{% static 'js/content.js'%}"></script>
+ <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+ <script src="{% static 'js/usingjQuery.js'%}"></script>
 
 </body>
 </html>
