--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title id="title1">Title</title>
-      <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style_responsive.css' %}" rel="stylesheet">
 
 
 
@@ -27,7 +28,7 @@
         <img src="{% static 'images/google.png' %} ">
 <!-----------------search box----------------------------->
         <div class="search-box">
-            <input type="text" placeholder="Search google or type a URL" class="search" id="search1">
+            <input type="text" placeholder="  Search google or type a URL" class="search" id="search1">
              <p id="result"></p>
             <!-----------search box icon&mic icon ------------------->
             <div class="icon">
@@ -82,7 +83,7 @@
             <p class="country">India</p>
         </div>
         <div>
-            <hr>
+<!--            <hr id="hr1">-->
         </div>
         <div class="row row2">
             <ul>
