--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title id="title1">Title</title>
     <link href="{% static 'css/style_responsive.css' %}" rel="stylesheet">
-
+<!--     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"-->
+<!--      rel="stylesheet">-->
 
 
 </head>
@@ -104,7 +105,7 @@
  <!---------------------------end of footer---------------------->
 </section>
  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
- <script src="{% static 'js/usingjQuery.js'%}"></script>
+ <script src="{% static 'js/usingAjax.js'%}"></script>
 
 </body>
 </html>
